# airaghidavide.github.io

./: .pre-commit-config.yaml  CHANGELOG.md  LICENCE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_website.yml
docs/: activities.md  index.md  publications.md  resume.md
docs/assets/charts/: publications.json
docs/css/: cards.css  timeline.css
docs/projects/: airtag_analysis.md  employee_churn.md  financial_inclusion.md  intro.md  twitter_user_profiling.md
docs/projects/notebook/: twitter_user_profiling.ipynb
