[tool.poetry]
name = "Personal website"
version = "0.0.2"
description = "Davide Airaghi personal website"
authors = [
    "Davide Airaghi <airaghi.davide@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.9, !=3.9.7, <3.11"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-charts-plugin = "^0.0.10"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-material = "^9.4.6"
mkdocs-minify-plugin = "^0.7.1"
neoteroi-mkdocs = "^1.0.4"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.3"
pre-commit = ">=3.4.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"